refactor: sonarqube analyses fixes